2013-12-18  Chong Yidong  <cyd@gnu.org>

	* modes.texi (Defining Minor Modes): Fix typo (Bug#14874).
	(Keymaps and Minor Modes): Fix binding convention (Bug#11522).

2013-12-13  Glenn Morris  <rgm@gnu.org>

	* internals.texi (Building Emacs):
	* loading.texi (Library Search): Mention that site-load,
	site-init cannot change load-path.

2013-12-12  Glenn Morris  <rgm@gnu.org>

	* elisp.texi: Tweak dircategory.

2013-12-12  Eli Zaretskii  <eliz@gnu.org>

	* nonascii.texi (Encoding and I/O): Document file-name encoding
	peculiarities on MS-Windows.

2013-12-12  Glenn Morris  <rgm@gnu.org>

	* elisp.texi: Sync direntry with info/dir version.

2013-12-08  Juanma Barranquero  <lekktu@gmail.com>

	* display.texi (Progress, Face Remapping):
	* processes.texi (Serial Ports):
	* windows.texi (Recombining Windows): Fix typos.  (Bug#16089)

2013-12-04  Juri Linkov  <juri@jurta.org>

	* searching.texi (Search and Replace): Fix `unread-command-events'
	and add ref.

2013-12-03  Juri Linkov  <juri@jurta.org>

	* windows.texi (Choosing Window): Rename `no-display-ok' to
	`allow-no-window'.  (Bug#13594)

2013-11-30  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (distclean): Remove Makefile.

2013-11-29  Andreas Politz  <politza@fh-trier.de>

	* modes.texi (Imenu): Make it clear that sub-alist is the cdr
	(Bug#14029).

2013-11-27  Glenn Morris  <rgm@gnu.org>

	* loading.texi (Library Search):
	* os.texi (Startup Summary): No more leim directory.

2013-11-26  Glenn Morris  <rgm@gnu.org>

	* os.texi (Startup Summary): Update for leim-list being preloaded.

2013-11-23  Brian Jenkins  <brian@brianjenkins.org>  (tiny change)

	* frames.texi (Input Focus):
	* hooks.texi (Standard Hooks): Mention focus-in-hook, focus-out-hook.

2013-11-23  Glenn Morris  <rgm@gnu.org>

	* loading.texi (Library Search):
	Empty elements in EMACSLOADPATH now mean the default load-path.

2013-11-22  Glenn Morris  <rgm@gnu.org>

	* loading.texi (Library Search): Minor clarification.
