@@ -11,6 +11,7 @@
 	* custom.el (custom-push-theme): If custom--inhibit-theme-enable
 	is non-nil, do not create a new entry in the symbol's theme-value
 	or theme-face property; update theme-settings only (Bug#14664).
+	(custom-available-themes): Doc fix.
 
 	* cus-theme.el (custom-new-theme-mode-map): Add bindings
 	(Bug#15674).
