@@ -1,5 +1,8 @@
 2013-12-18  Chong Yidong  <cyd@gnu.org>
 
+	* customize.texi (Custom Themes): Document custom-known-themes
+	(Bug#15717).
+
 	* modes.texi (Defining Minor Modes): Fix typo (Bug#14874).
 	(Keymaps and Minor Modes): Fix binding convention (Bug#11522).
 
